about us spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/* body {
-    background-image: url("/img/cool-background\ \(1\).png");
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
-
 body {
     background-color: #444444;
 }
@@ -27,6 +21,22 @@ body {
 
 #contact-us {
     background-color: #fff!important;
+}
+
+
+/* .aboutus-page {
+    background-color: red !important;
+    color: aqua;
+    height: 550px;
+    margin-top: 0;
+}
+
+.text-white h2 {
+    margin-bottom: 0 !important;
+} */
+
+#aboutus-heading h2 {
+    padding-top: 10px;
 }
 
 .text-center h2 {
